sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value b
	while(b!=0){
              ^AlgBubbleSort1:12: error: not found: value b
			b=1
                        ^